# cs336-assignment1

./: .gitignore  CLAUDE.md  CMakeLists.txt  pyproject.toml  setup.py
cs336_basics/: _cpp_tokenizer.pyi  checkpoint.py  cpp_tokenizer.cpp  cpp_tokenizer.hpp  data.py  model.py  nn_utils.py  optimizer.py  tokenizer.py
scripts/: prepare_tinystories.py  sample_tinystories.py  train_tinystories.py
tests/: adapters.py
